syntax = "proto3";

package frontend.api;

import "aspect.proto";
import "model.proto";

option java_package = "com.yanivian.connect.frontend.proto.api";
option java_multiple_files = true;

message AddConnectionResult {
  .frontend.aspect.UserInfo User = 1;
  bool IsConnected = 2;
}

message LoginContext {
  // Whether this is the user's first login.
  bool IsFirstLogin = 1;
  .frontend.model.Profile Profile = 2;

  message CredentialsContainer {
    string GoogleCloudApiKey = 1;
    string OpenAIApiKey = 2;
  }
  CredentialsContainer Credentials = 3;

  .frontend.aspect.ConnectionsSnapshot ConnectionsSnapshot = 4;
}
