syntax = "proto3";

package frontend.model;

option java_package = "com.yanivian.connect.frontend.proto.model";
option java_multiple_files = true;

message Profile {
  string UserID = 1;
  string PhoneNumber = 2;
  int64 CreatedTimestampMillis = 3;
  optional string Name = 4;
  optional string EmailAddress = 5;
  optional Image Image = 6;
  optional int64 LastUpdatedTimestampMillis = 7;
}

message Image {
  string ID = 1;
  // ID of the user that uploaded and owns the image.
  string UserID = 2;
  int64 CreatedTimestampMillis = 3;
  // URL that can dynamically serve the image blob.
  string URL = 4;
}